--- a/index.html
+++ b/index.html
@@ -1,121 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="https://cdn.tailwindcss.com"></script>
+		<title>StartPage</title>
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<script src="https://cdn.tailwindcss.com"></script>
-	<title>StartPage</title>
-</head>
-
-<body class="bg-zinc-800 bg-[url('./bg.png')] bg-center bg-cover bg-no-repeat h-screen w-screen text-white">
-	<main class="h-full w-full backdrop-blur-lg bg-black bg-opacity-10 p-5">
-		<div class="w-full h-full grid md:grid-cols-[repeat(10,calc(calc(100%-8px*10)/10))] md:grid-rows-[repeat(9,calc(calc(100%-8px*9)/9))] lg:grid-cols-[repeat(17,calc(calc(100%-8px*17)/17))] lg:grid-rows-[repeat(9,calc(calc(100%-8px*9)/9))] gap-2"
-			id="cards">
-			<div id="timeDiv"
-				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:col-[1/6] md:row-[1] lg:col-[1/5]">
-				<span id="time" class="font-bold text-3xl text-center w-full">00:00:00</span>
-			</div>
-			<div id="searchDiv"
-				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[2] md:col-[1/11] lg:row-[1] lg:col-[5/15]">
-				<form action="https://google.com/search" class="w-full h-full flex items-center justify-center">
-					<input type="search" autocomplete="off"
-						class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
-						name="q" autofocus placeholder="Google search" />
-				</form>
-			</div>
-			<div id="weatherDiv"
-				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:col-[6/11] lg:col-[15/18]">
-				<div class="m-5 w-full h-full flex items-center justify-center">
-					<span id="weather" class="font-bold text-3xl"></span>
+	<body class="bg-zinc-800 bg-[url('./bg.png')] bg-center bg-cover bg-no-repeat h-screen w-screen text-white">
+		<main class="h-full w-full backdrop-blur-lg bg-black bg-opacity-10 p-5">
+			<div
+				class="w-full h-full grid md:grid-cols-[repeat(10,calc(calc(100%-8px*10)/10))] md:grid-rows-[repeat(9,calc(calc(100%-8px*9)/9))] lg:grid-cols-[repeat(17,calc(calc(100%-8px*17)/17))] lg:grid-rows-[repeat(9,calc(calc(100%-8px*9)/9))] gap-2"
+				id="cards"
+			>
+				<div id="timeDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:col-[1/6] md:row-[1] lg:col-[1/5]">
+					<span id="time" class="font-bold text-3xl text-center w-full">00:00:00</span>
+				</div>
+				<div id="searchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[2] md:col-[1/11] lg:row-[1] lg:col-[5/15]">
+					<form action="https://google.com/search" class="w-full h-full flex items-center justify-center">
+						<input
+							type="search"
+							autocomplete="off"
+							class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
+							name="q"
+							autofocus
+							placeholder="Google search"
+						/>
+					</form>
+				</div>
+				<div id="weatherDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:col-[6/11] lg:col-[15/18]">
+					<div class="m-5 w-full h-full flex items-center justify-center">
+						<span id="weather" class="font-bold text-3xl"></span>
+					</div>
+				</div>
+				<div id="jokeDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:col-[1/11] lg:col-[1/8] lg:row-start-5">
+					<div class="m-5 w-full h-full flex items-center justify-center">
+						<span id="joke" class="font-bold text-2xl"></span>
+					</div>
+				</div>
+				<div
+					id="bookmarkDiv"
+					class="gap-5 p-5 bg-white bg-opacity-10 rounded-lg shadow-md grid grid-rows-2 grid-cols-5 items-center justify-start md:col-[1/11] md:row-[6/10] lg:col-[8/18] lg:row-[2/6]"
+				>
+					<div onclick="window.location.href='https://youtube.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/youtube.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://github.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/github.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://chess.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/chess.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://chat.openai.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/openai.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://web.telegram.org/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/web.telegram.org')]"></div>
+					</div>
+					<div onclick="window.location.href='https://instagram.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/instagram.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://notion.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/notion.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://trello.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/trello.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://mail.yandex.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/mail.yandex.com')]"></div>
+					</div>
+					<div onclick="window.location.href='https://mail.google.com/'" class="w-full h-full flex justify-center items-center flex-col hover:cursor-pointer">
+						<div class="h-full w-full bg-no-repeat bg-center rounded-3xl bg-contain m-4 bg-[url('https://icon.horse/icon/mail.google.com')]"></div>
+					</div>
+				</div>
+				<div id="githubSearchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[4] md:col-[1/6] lg:row-[2] lg:col-[1/8]">
+					<form action="https://github.com/search" class="w-full h-full flex items-center justify-center">
+						<input
+							type="search"
+							autocomplete="off"
+							class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
+							name="q"
+							placeholder="Github search"
+						/>
+					</form>
+				</div>
+				<div id="youtubeSearchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[3] md:col-[1/11] lg:col-[1/8]">
+					<form action="https://youtube.com/results" class="w-full h-full flex items-center justify-center">
+						<input
+							type="search"
+							autocomplete="off"
+							class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
+							name="search_query"
+							placeholder="Youtube search"
+						/>
+					</form>
+				</div>
+				<div id="StackSearchDiv" class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[4] md:col-[6/11] lg:col-[1/8]">
+					<form action="https://stackoverflow.com/search" class="w-full h-full flex items-center justify-center">
+						<input
+							type="search"
+							autocomplete="off"
+							class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
+							name="q"
+							placeholder="Stackoverflow search"
+						/>
+					</form>
 				</div>
 			</div>
-			<div id="jokeDiv"
-				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:col-[1/11] lg:col-[1/8] lg:row-start-5">
-				<div class="m-5 w-full h-full flex items-center justify-center">
-					<span id="joke" class="font-bold text-2xl"></span>
-				</div>
-			</div>
-			<div id="bookmarkDiv"
-				class="gap-5 p-5 bg-white bg-opacity-10 rounded-lg shadow-md grid grid-rows-2 grid-cols-5 items-center justify-start md:col-[1/11] md:row-[6/10] lg:col-[8/18] lg:row-[2/6]">
-				<div onclick="window.location.href='https://youtube.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/youtube.com" />
-
-				</div>
-				<div onclick="window.location.href='https://github.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/github.com" />
-
-				</div>
-				<div onclick="window.location.href='https://chess.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/chess.com" />
-
-				</div>
-				<div onclick="window.location.href='https://chat.openai.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/openai.com" />
-
-				</div>
-				<div onclick="window.location.href='https://web.telegram.org/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/web.telegram.org" />
-
-				</div>
-				<div onclick="window.location.href='https://instagram.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/instagram.com" />
-
-				</div>
-				<div onclick="window.location.href='https://notion.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/notion.com" />
-
-				</div>
-				<div onclick="window.location.href='https://trello.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/trello.com" />
-
-				</div>
-				<div onclick="window.location.href='https://mail.yandex.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/mail.yandex.com" />
-
-				</div>
-				<div onclick="window.location.href='https://mail.google.com/'"
-					class="w-full h-full rounded-3xl flex justify-center items-center flex-col hover:cursor-pointer">
-					<img class="w-full m-4 rounded-3xl" src="https://icon.horse/icon/mail.google.com" />
-
-				</div>
-			</div>
-			<div id="githubSearchDiv"
-				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[4] md:col-[1/6] lg:row-[2] lg:col-[1/8]">
-				<form action="https://github.com/search" class="w-full h-full flex items-center justify-center">
-					<input type="search" autocomplete="off"
-						class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
-						name="q" placeholder="Github search" />
-				</form>
-			</div>
-			<div id="youtubeSearchDiv"
-				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[3] md:col-[1/11] lg:col-[1/8]">
-				<form action="https://youtube.com/results" class="w-full h-full flex items-center justify-center">
-					<input type="search" autocomplete="off"
-						class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
-						name="search_query" placeholder="Youtube search" />
-				</form>
-			</div>
-			<div id="StackSearchDiv"
-				class="bg-white bg-opacity-10 rounded-lg shadow-md flex items-center justify-center md:row-[4] md:col-[6/11] lg:col-[1/8]">
-				<form action="https://stackoverflow.com/search" class="w-full h-full flex items-center justify-center">
-					<input type="search" autocomplete="off"
-						class="border-none outline-none bg-black bg-opacity-10 w-full rounded-full p-5 text-center m-5 text-2xl"
-						name="q" placeholder="Stackoverflow search" />
-				</form>
-			</div>
-		</div>
-	</main>
-	<script src="script.js"></script>
-</body>
-
+		</main>
+		<script src="script.js"></script>
+	</body>
 </html>
